# rag-mediterranean

./: .gitignore  DEPLOY.md  README.md  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: app.py
artifacts/: .gitkeep  chunks_overlapping.json  embeddings_BAAI__bge-small-en-v1.5.pkl
notebooks/: experiments.ipynb  main_pipeline.ipynb
scripts/: build_index.py  evaluate.py  run_inference.py
src/rag_culinary/: __init__.py  chunking.py  config.py  corpus.py  embedding.py  evaluation.py  generation.py  io_utils.py  pipeline.py  retrieval.py
tests/: conftest.py  test_chunking.py  test_generation.py  test_io.py  test_retrieval.py
